--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@
 ################################################################################
 
 # Use ubuntu trusty (14.04) with sudo privileges.
-dist: trusty
+dist: bionic
 sudo: required
 language:
   - generic
@@ -53,7 +53,7 @@ cache:
 # trigger a build matrix for different ROS distributions if desired.
 env:
   global:
-    - ROS_DISTRO=indigo
+    - ROS_DISTRO=melodic
     - ROS_CI_DESKTOP="`lsb_release -cs`"  # e.g. [precise|trusty|...]
     - CI_SOURCE_PATH=$(pwd)
     - ROSINSTALL_FILE=$CI_SOURCE_PATH/dependencies.rosinstall
@@ -65,7 +65,7 @@ env:
 # Install system dependencies, namely a very barebones ROS setup.
 before_install:
   - sudo sh -c 'echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list'
-  - sudo apt-key adv --keyserver hkp://ha.pool.sks-keyservers.net:80 --recv-key 421C365BD9FF1F717815A3895523BAEEB01FA116
+  - sudo apt-key adv --keyserver 'hkp://keyserver.ubuntu.com:80' --recv-key C1CF6E31E6BADE8868B172B4F42ED6FBAB17C654
   - sudo apt-get update -qq
   - sudo apt-get install -y python-catkin-pkg python-rosdep python-wstool ros-$ROS_DISTRO-catkin
   - source /opt/ros/$ROS_DISTRO/setup.bash
@@ -93,7 +93,7 @@ install:
 before_script:
   # source dependencies: install using wstool.
   - cd ~/catkin_ws/src
-  - git clone https://github.com/GT-RAIL/rail_manipulation_msgs.git
+  - git clone https://github.com/GT-RAIL/rail_manipulation_msgs.git -b melodic-devel
   - git clone https://github.com/GT-RAIL/robotiq_85_gripper.git
   - cd robotiq_85_gripper
   - cp -r robotiq_85_msgs ..
